# structure-from-motion

./: .gitignore  NOTES.md  README.md  TODO.md  main.py  pyproject.toml
scripts/: download_ggg.py  download_mipnerf360.py  download_sfmedu.py
src/sfm/: bootstrapping.py  bundle_adjustment.py  cli.py  data.py  epipolar_geometry.py  feature_extraction.py  fqs.py  intrinsics.py  pnp.py  tui.py  utils.py
tests/: _synth.py  conftest.py  test_essential_matrix.py  test_feature_extraction.py  test_fundamental_matrix.py  test_p3p.py  test_pnp_ransac.py  test_ransac.py  test_sampson_distance.py  test_structure_bootstrap.py  test_triangulation.py
