[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
