[project]
name = "sfm"
version = "0.1.0"
description = "Structure from Scratch — a learning SfM pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "opencv-contrib-python>=5.0.0.93",
    "opencv-python>=4.13.0.92",
    "pillow>=11.1.0",
    "scipy>=1.17.1",
    "rich>=13.0",
    "typer>=0.24.1",
]

[project.scripts]
sfm = "sfm.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
